--- a/src/ui/common/HotkeyLabel.pug
+++ b/src/ui/common/HotkeyLabel.pug
@@ -6,12 +6,12 @@ kbd {key.toUpperCase()}
 style.
 	kbd
 		align-items center
-		border 1px solid
-		border-radius 3px
-		display flex
-		font-family inherit
-		font-size 12px
-		height 18px
+		background var(--c-blend-normal)
+		border-radius 4px
+		display inline-flex
+		font-size 10px
+		font-weight bold
+		height 17px
 		justify-content center
 		line-height 1
-		padding 0 3px
+		min-width 17px
